fix(table): cell content does not wrap #210

--- a/src/components/Table/src/style/index.less
+++ b/src/components/Table/src/style/index.less
@@ -111,7 +111,7 @@
   .ant-table-tbody > tr > th,
   .ant-table-thead > tr > td,
   .ant-table-thead > tr > th {
-    white-space: nowrap;
+    white-space: pre;
   }
 
   .ant-table-row-cell-last {
